# soft_and_tender

./: README.md
c_languaage/big_homework/: CMakeLists.txt  DIARY.md  report.md  run.c
c_languaage/big_homework/include/: common.h
c_languaage/cplcpl/: CMakeLists.txt  main.c
c_languaage/cplcpl/class01/: CMakeLists.txt  circle.c  guess.c  mol.c  spere.c
c_languaage/cplcpl/exam2021/: CMakeLists.txt  bsearcha.c  gobang.c  mergege.c  rec.c  sorted.c
c_languaage/cplcpl/exam2022/: CMakeLists.txt  broshi.c  checker.c  life2.c  score.c  sort.c
c_languaage/cplcpl/homework1/: CMakeLists.txt  Equation.c  Julian.c  PI.c  gravity.c  jijojo.c  money.c  time.c
c_languaage/cplcpl/homework10/: CMakeLists.txt  bsearch.c  fifa.c  polynlist.c  split-sort.c
c_languaage/cplcpl/homework2/: CMakeLists.txt  collatz.c  factorial.c  inverse.c  series.c  single.c  standup.c
c_languaage/cplcpl/homework3/: CMakeLists.txt  flip2.c  josephus.c  palindrome-1.c  ternary.c
c_languaage/cplcpl/homework4/: CMakeLists.txt  formation.c  life.c  matrix.c  mines.c  obstacle.c  soduku.c  statistics.c  trace.c
c_languaage/cplcpl/homework5/: CMakeLists.txt  absolute-prime.c  magic-square.c  next-permutation.c  pair.c  radix.c  sum.c
c_languaage/cplcpl/hw6/: CMakeLists.txt  decomposition.c  integration.c  max.c  pascal.c  poi.c  tiles.c  triangle.c
c_languaage/cplcpl/hw7/: CMakeLists.txt  brackets.c  buddy.c  buddyp.c  cuboid.c  pour.c  pppp.c  rotate.c  stack.c  whac-a-mole.c  whac-a-molep.c  wine.c
c_languaage/cplcpl/hw8/: interpreter.c  substr.c  title.c
c_languaage/cplcpl/hw9/: CMakeLists.txt  parse.c  strs_cat.c  strs_interleaf.c  tokenizer.c
c_languaage/cplcpl/jiji/: CMakeLists.txt  bigxie.c  erjinzhi.c  kongge.c  zhuangtai.c
c_languaage/cplcpl/ll/: CMakeLists.txt  cycle.c  file-management.c  keyboard.c  stack_pour.c  stack_pour_plus.c
c_languaage/cplcpl/self_learn/: CMakeLists.txt  geshi.c  jiec.c  plus.c  primes.c  tianshudu.c
c_languaage/homework/: CMakeLists.txt  b-ternary-1.c  b-ternary-2.c  bubble-sort.c  bubbleaa.c  decimal.c  main.c  mary.c  palindrome-2.c  qianqian.c  quick-sort.c
c_languaage/self-fun/: CMakeLists.txt  main.c  mergesort.c  readme.md
c_languaage/self-fun/luogu/: 1017jing.c  1047.c  1145plus.c  B3625.c  B3630.c  B3680.c  B3827.c  B3849.c  CMakeLists.txt  P10#15.c  P1022.c  P1024.c  P1028.c  P1049.c  P1059.c  P1071.c  P1079.c  P1086.c  P1109.c  P1115.c  P1125.c  P1145yuesefu.c  P1179.c  P1276.c  P1376.c  P1451.c  P1616.c  P1689.c  P1823.c  P1972.c  P2001zhuangtai.c  P2005ztp.c  P3397.c  guohezu.c  happyjin.c  lamp.c  migong.c  p1003.c  p1012.c  p1271.c  (+2 more)
c_languaage/self-fun/self-learn/: 1020.c  3pigs.c  CMakeLists.txt  digui.c  searchmine.c
c_languaage/self-fun/stdlib/: CMakeLists.txt  some.c
c_languaage/self-fun/string/: CMakeLists.txt  stringfun.c
codes/etr/: CMakeLists.txt  Homework.c  cjiajia.cpp  xingtu.cpp
java/Hello_learn_Java/: README.md  pom.xml  salary2.csv  salary3.csv
java/first/: csv.text
java/first/src/: Main.java  readfile.java
java/guessgame/src/: GuessGame.java  Main.java  (+1 more)
py/leetcode/: Roman_to_integer.py  anagram.py  bad_keyboard.py  many_num.py  order_three.py  related.py  swap_words_to_equal.py  three.py
py/pythonProject2/: 317.py  319.py  bianli.py  dic.py  file.py  list.py  string.py  temm.py  text.txt
(+71 files in other folders)
