cmake_minimum_required(VERSION 3.25)
project(cpl_class1 C)
set(CMAKE_C_STANDARD 17)
add_subdirectory(class01)
add_subdirectory(../cplcpl/homework1)
add_subdirectory(self_learn)
add_executable(main main.c)
add_subdirectory(homework2)
add_subdirectory(jiji)
add_subdirectory(homework3)
add_subdirectory(homework4)
add_subdirectory(homework10)
add_subdirectory(homework5)
add_subdirectory(hw6)
add_subdirectory(hw7)
add_subdirectory(hw8)
add_subdirectory(hw9)
add_subdirectory(exam2022)
add_subdirectory(exam2021)
add_subdirectory(ll)