add_executable(taotao 1145plus.c)
add_executable(lamp lamp.c)
add_executable(1047 1047.c)
add_executable(migong migong.c)
add_executable(P1022 P1022.c)
add_executable(P1086 P1086.c)
add_executable(B3827 B3827.c)
add_executable(B3680 B3680.c)
add_executable(P1028 P1028.c)
add_executable(P1689 P1689.c)
add_executable(P1451 P1451.c)
add_executable(B3625 B3625.c)
add_executable(P1079 P1079.c)
add_executable(P1972 P1972.c)
add_executable(p1271 p1271.c)
add_executable(P1376 P1376.c)
add_executable(P1179 P1179.c)
add_executable(P1071 P1071.c)
add_executable(p1003 p1003.c)
add_executable(P1109 P1109.c)
add_executable(p1012 p1012.c)
add_executable(P1115 P1115.c)
add_executable(P1059 P1059.c)
add_executable(P3397 P3397.c)
add_executable(P1145 P1145yuesefu.c)
add_executable(P1049 P1049.c)
add_executable(1017jing 1017jing.c)
add_executable(B3849 B3849.c)
add_executable(P2001zhuangtai P2001zhuangtai.c)
add_executable(P2005ztp P2005ztp.c)
add_executable(guohezu guohezu.c)
add_executable(happyjin happyjin.c)
add_executable(P1125 P1125.c)
add_executable(redcard redcard.c)
add_executable(P1616 P1616.c)
add_executable(P1015 "P10#15.c")
add_executable(B3630 B3630.c)
add_executable(P1024 P1024.c)
add_executable(taijie taijie.c)
add_executable(P1276 P1276.c)
add_executable(P1823 P1823.c)